--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 <body style="padding-top: 5rem;">
 	<nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
 		<h1 class="navbar-brand">Meyda</h1>
+    <ul class="nav navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="https://github.com/hughrawlinson/meyda/">GitHub</a>
+      </li>
+    </ul>
 	</nav>
 	<div class="container">
 		<div class="row">
