--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 		</div>
 		<div class="row">
 			<div id="showcase" class="col-xs-12">
+        <div id="audioControl">
+          <p>Allow microphone access or play this audio file to see a demo.</p>
+          <audio id="elvisSong" controls src="/ripitup.mp3"></audio>
+        </div>
 			</div>
 			<hr>
 		</div>
